Inventory::NewItem() 박스에 아이템이 있는지 없는지 체크하는곳 수정

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -221,7 +221,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="InventoryExit.h">
+    <ClInclude Include="ExitBotton.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -537,7 +537,7 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="InventoryExit.cpp">
+    <ClCompile Include="ExitBotton.cpp">
       <SubType>
       </SubType>
     </ClCompile>
