--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -194,6 +194,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Crops.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="CropsData.h" />
     <ClInclude Include="Daffodil_Shop.h">
       <SubType>
@@ -505,6 +509,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Chair.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Crops.cpp">
       <SubType>
       </SubType>
     </ClCompile>
