--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -178,6 +178,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Bean_Crops.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Block.h">
       <SubType>
       </SubType>
@@ -187,6 +191,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="CauliflowerSeeds_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Cauliflower_Crops.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -245,6 +253,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Jazz_Crops.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="KaleSeeds_Shop.h">
       <SubType>
       </SubType>
@@ -294,7 +306,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Parsnip_Growing.h">
+    <ClInclude Include="Parsnip_Crops.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -307,6 +319,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="PatatoSeeds_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Patato_Crops.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -457,6 +473,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Tulip_Crops.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Tv.h">
       <SubType>
       </SubType>
@@ -496,6 +516,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Bean_Crops.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Block.cpp">
       <SubType>
       </SubType>
@@ -505,6 +529,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CauliflowerSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Cauliflower_Crops.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -562,6 +590,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="JazzSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Jazz_Crops.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -638,7 +670,7 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Parsnip_Growing.cpp">
+    <ClCompile Include="Parsnip_Crops.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -651,6 +683,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="PatatoSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Patato_Crops.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -767,6 +803,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TulipBulb_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Tulip_Crops.cpp">
       <SubType>
       </SubType>
     </ClCompile>
