--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -174,11 +174,16 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Bean.h" />
     <ClInclude Include="BeanStarter_Shop.h">
       <SubType>
       </SubType>
     </ClInclude>
     <ClInclude Include="Bean_Crops.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Bean_Seeds.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -198,6 +203,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Cauliflower_Seeds.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Chair.h">
       <SubType>
       </SubType>
@@ -207,14 +216,18 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="CropsData.h" />
+    <ClInclude Include="Daffodil.h" />
     <ClInclude Include="Daffodil_Shop.h">
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Dandelion.h" />
     <ClInclude Include="Dandelion_Shop.h">
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DropStone.h" />
+    <ClInclude Include="DropWood.h" />
     <ClInclude Include="FixedPlayerColl.h">
       <SubType>
       </SubType>
@@ -257,19 +270,19 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Jazz_Seeds.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="KaleSeeds_Shop.h">
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Kale_Seeds.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MapColl.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="MiniStone.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="MiniWood.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -318,6 +331,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Pasnip.h" />
     <ClInclude Include="PatatoSeeds_Shop.h">
       <SubType>
       </SubType>
@@ -393,6 +407,11 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="PlayLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Potato.h" />
+    <ClInclude Include="Potato_Seeds.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -477,6 +496,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Tulip_Seeds.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Tv.h">
       <SubType>
       </SubType>
@@ -485,15 +508,9 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Weeds.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="WildHorseradish.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
     <ClInclude Include="ItemCode.h" />
+    <ClInclude Include="Weeds.h" />
+    <ClInclude Include="WildHorseradish.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Axe.cpp">
@@ -512,11 +529,16 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Bean.cpp" />
     <ClCompile Include="BeanStarter_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
     <ClCompile Include="Bean_Crops.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Bean_Seeds.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -536,6 +558,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Cauliflower_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Chair.cpp">
       <SubType>
       </SubType>
@@ -544,14 +570,18 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Daffodil.cpp" />
     <ClCompile Include="Daffodil_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Dandelion.cpp" />
     <ClCompile Include="Dandelion_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="DropStone.cpp" />
+    <ClCompile Include="DropWood.cpp" />
     <ClCompile Include="FixedPlayerColl.cpp">
       <SubType>
       </SubType>
@@ -597,7 +627,15 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Jazz_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="KaleSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Kale_Seeds.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -618,14 +656,6 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MenuLoad.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="MiniStone.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="MiniWood.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -682,6 +712,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Pasnip.cpp" />
     <ClCompile Include="PatatoSeeds_Shop.cpp">
       <SubType>
       </SubType>
@@ -729,6 +760,11 @@
     <ClCompile Include="PlayerState.cpp" />
     <ClCompile Include="PlayerTile.cpp" />
     <ClCompile Include="PlayLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Potato.cpp" />
+    <ClCompile Include="Potato_Seeds.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -810,6 +846,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Tulip_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Tv.cpp">
       <SubType>
       </SubType>
@@ -818,14 +858,8 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Weeds.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="WildHorseradish.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
+    <ClCompile Include="Weeds.cpp" />
+    <ClCompile Include="WildHorseradish.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameEngineBase\GameEngineBase.vcxproj">
