--- a/API/GameEngine/GameEngine.vcxproj
+++ b/API/GameEngine/GameEngine.vcxproj
@@ -182,6 +182,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="GameEngineFont.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="GameEngineImage.h">
       <SubType>
       </SubType>
@@ -225,6 +229,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GameEngineFolderImage.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="GameEngineFont.cpp">
       <SubType>
       </SubType>
     </ClCompile>
