--- a/API/GameEngine/GameEngine.vcxproj.filters
+++ b/API/GameEngine/GameEngine.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="GameEngineFolderImage.h">
       <Filter>Resources</Filter>
     </ClInclude>
+    <ClInclude Include="GameEngineFont.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngine.cpp" />
@@ -66,6 +69,9 @@
       <Filter>Contents</Filter>
     </ClCompile>
     <ClCompile Include="GameEngineFolderImage.cpp">
+      <Filter>Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineFont.cpp">
       <Filter>Resources</Filter>
     </ClCompile>
   </ItemGroup>
