아이템 관리 클래스 수정

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -331,6 +331,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="MyHouseLevel.h" />
+    <ClInclude Include="Npc.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ParsnipSeeds_Shop.h">
       <SubType>
       </SubType>
@@ -349,6 +353,10 @@
     </ClInclude>
     <ClInclude Include="Pasnip.h" />
     <ClInclude Include="PatatoSeeds_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Pierre.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -732,6 +740,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MyHouseLevel.cpp" />
+    <ClCompile Include="Npc.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="ParsnipSeeds_Shop.cpp">
       <SubType>
       </SubType>
@@ -750,6 +762,10 @@
     </ClCompile>
     <ClCompile Include="Pasnip.cpp" />
     <ClCompile Include="PatatoSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Pierre.cpp">
       <SubType>
       </SubType>
     </ClCompile>
