--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -230,6 +230,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DialogueBox.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DropStone.h" />
     <ClInclude Include="DropWood.h" />
     <ClInclude Include="FixedPlayerColl.h">
@@ -609,6 +613,10 @@
     </ClCompile>
     <ClCompile Include="Dandelion.cpp" />
     <ClCompile Include="Dandelion_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="DialogueBox.cpp">
       <SubType>
       </SubType>
     </ClCompile>
