--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -339,6 +339,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="NpcData.h" />
     <ClInclude Include="ParsnipSeeds_Shop.h">
       <SubType>
       </SubType>
