--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -490,8 +490,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="TileData.h" />
-    <ClInclude Include="TitleBackGround.h" />
-    <ClInclude Include="TitleCloud.h" />
+    <ClInclude Include="Title.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TitleLevel.h">
       <SubType>
       </SubType>
@@ -873,8 +875,10 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="TitleBackGround.cpp" />
-    <ClCompile Include="TitleCloud.cpp" />
+    <ClCompile Include="Title.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TitleLevel.cpp">
       <SubType>
       </SubType>
