--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -187,6 +187,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Bird.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Block.h">
       <SubType>
       </SubType>
@@ -574,6 +578,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Bean_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Bird.cpp">
       <SubType>
       </SubType>
     </ClCompile>
