타이틀 로고 애니메이션 랜덤값 수정

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -249,6 +249,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="GameData.h" />
+    <ClInclude Include="GiftBox.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Hitter.h">
       <SubType>
       </SubType>
@@ -638,6 +642,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Font.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="GiftBox.cpp">
       <SubType>
       </SubType>
     </ClCompile>
