--- a/API/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/API/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -323,6 +323,18 @@
     <ClCompile Include="EmptyItem.cpp">
       <Filter>Actor\03. Play\Obejct\Item</Filter>
     </ClCompile>
+    <ClCompile Include="Particles.cpp">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Effect.cpp">
+      <Filter>Actor\03. Play\Obejct</Filter>
+    </ClCompile>
+    <ClCompile Include="StoneEffect.cpp">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="WoodEffect.cpp">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StardewValley.h" />
@@ -668,6 +680,18 @@
     <ClInclude Include="EmptyItem.h">
       <Filter>Actor\03. Play\Obejct\Item</Filter>
     </ClInclude>
+    <ClInclude Include="Particles.h">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Effect.h">
+      <Filter>Actor\03. Play\Obejct</Filter>
+    </ClInclude>
+    <ClInclude Include="StoneEffect.h">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="WoodEffect.h">
+      <Filter>Actor\03. Play\Obejct\Effect</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Actor">
@@ -744,6 +768,9 @@
     </Filter>
     <Filter Include="Actor\03. Play\Obejct\Farming\Crops">
       <UniqueIdentifier>{67fa58fc-eb51-4124-b642-16508260f0d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor\03. Play\Obejct\Effect">
+      <UniqueIdentifier>{3eb1d130-35b3-4730-97f3-e0e1188c6ba8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
