--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -318,6 +318,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="KiraEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MapColl.h">
       <SubType>
       </SubType>
@@ -735,6 +739,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Kale_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="KiraEffect.cpp">
       <SubType>
       </SubType>
     </ClCompile>
