--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -567,6 +567,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="WateringCanEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Watering_Can.h">
       <SubType>
       </SubType>
@@ -980,6 +984,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Tv.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="WateringCanEffect.cpp">
       <SubType>
       </SubType>
     </ClCompile>
